# webtacka

./: README.md
backend/: CollisionDetection.hs  Main.hs  UnitTest.hs  webtacka.cabal
frontend/: README  index.html  network-test.html  test.html
frontend/js/: config.default.js  controller.js  engine.js  net.js  ui.js
webgl-tests/: test.html
webgl-tests/js/: engine.js
