Name:                webtacka
Version:             0.0
Description:         backend for multiplayer webtacka game
License:             GPL-3
Author:              Adam Michalik <adam@michalik.es>
Maintainer:          Adam Michalik <adam@michalik.es>
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable Main
  Main-is:           Main.hs
  Build-Depends:     base, containers, text, mtl, transformers,
                     network, websockets, stm, json, bytestring


